// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oda-enrollment-android-applink should render form 1`] = `
<div>
  <div
    class="emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-se="auth-container main-container"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="MuiBox-root emotion-6"
                data-se="okta-sign-in-header auth-header authCoinSpacing"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                  tabindex="-1"
                />
                <div
                  aria-hidden="true"
                  class="MuiBox-root emotion-8"
                  data-se="factor-beacon mfa-okta-verify "
                >
                  <svg
                    aria-labelledby="mfa-okta-verify"
                    fill="none"
                    height="2.85714286rem"
                    role="img"
                    viewBox="0 0 48 48"
                    width="2.85714286rem"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="mfa-okta-verify"
                    >
                      Okta Verify
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M32.872 22.853a8.947 8.947 0 1 1-2.288-4.91L24 24.498l-3.205-3.19c-.482-.48-1.322-.48-1.804 0a1.26 1.26 0 0 0-.374.898c0 .34.133.659.374.898l4.107 4.09c.24.239.561.371.902.371.336 0 .664-.136.902-.372L38.636 13.52a18.089 18.089 0 0 0-1.634-1.967A17.947 17.947 0 0 0 24 6C14.059 6 6 14.059 6 24s8.059 18 18 18 18-8.059 18-18c0-2.972-.722-5.775-1.998-8.245l-7.13 7.098Z"
                      fill="#00297A"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-9"
              >
                <form
                  aria-live="polite"
                  class="o-form MuiBox-root emotion-10"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-13"
                      >
                        <div
                          class="MuiBox-root emotion-14"
                        >
                          <h2
                            class="MuiTypography-root MuiTypography-h4 emotion-15"
                            data-se="o-form-head"
                            tabindex="-1"
                          >
                            Additional setup required to use Okta FastPass
                          </h2>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-13"
                      >
                        <fieldset
                          class="MuiFormControl-root MuiFormControl-marginNormal emotion-17"
                        >
                          <legend
                            class="MuiFormLabel-root MuiFormLabel-colorPrimary emotion-18"
                            id="hasOVAccount-label"
                          >
                            On this device, do you already have an Okta Verify account for Widgico?
                             
                          </legend>
                          <div
                            aria-labelledby="hasOVAccount-label"
                            class="MuiFormGroup-root MuiRadioGroup-root emotion-19"
                            data-se="hasOVAccount"
                            id="hasOVAccount"
                            role="radiogroup"
                          >
                            <label
                              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-20"
                            >
                              <span
                                class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall Mui-checked MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall emotion-21"
                              >
                                <input
                                  class="PrivateSwitchBase-input emotion-22"
                                  name="hasOVAccount"
                                  type="radio"
                                  value="no"
                                />
                              </span>
                              <span
                                class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-23"
                              >
                                <span
                                  class="MuiTypography-root MuiTypography-body1 emotion-23"
                                  tabindex="-1"
                                >
                                  No, I don’t have an account
                                </span>
                              </span>
                            </label>
                            <label
                              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-20"
                            >
                              <span
                                class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall emotion-21"
                              >
                                <input
                                  class="PrivateSwitchBase-input emotion-22"
                                  name="hasOVAccount"
                                  type="radio"
                                  value="yes"
                                />
                              </span>
                              <span
                                class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-23"
                              >
                                <span
                                  class="MuiTypography-root MuiTypography-body1 emotion-23"
                                  tabindex="-1"
                                >
                                  Yes, I already have an account
                                </span>
                              </span>
                            </label>
                          </div>
                        </fieldset>
                      </div>
                      <div
                        class="MuiBox-root emotion-13"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-fullWidth emotion-31"
                          tabindex="0"
                          type="button"
                        >
                          Next
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`oda-enrollment-android-applink should render view when "No, I don’t have an account" is selected 1`] = `
<div>
  <div
    class="emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-se="auth-container main-container"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="MuiBox-root emotion-6"
                data-se="okta-sign-in-header auth-header authCoinSpacing"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                  tabindex="-1"
                />
                <div
                  aria-hidden="true"
                  class="MuiBox-root emotion-8"
                  data-se="factor-beacon mfa-okta-verify "
                >
                  <svg
                    aria-labelledby="mfa-okta-verify"
                    fill="none"
                    height="2.85714286rem"
                    role="img"
                    viewBox="0 0 48 48"
                    width="2.85714286rem"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="mfa-okta-verify"
                    >
                      Okta Verify
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M32.872 22.853a8.947 8.947 0 1 1-2.288-4.91L24 24.498l-3.205-3.19c-.482-.48-1.322-.48-1.804 0a1.26 1.26 0 0 0-.374.898c0 .34.133.659.374.898l4.107 4.09c.24.239.561.371.902.371.336 0 .664-.136.902-.372L38.636 13.52a18.089 18.089 0 0 0-1.634-1.967A17.947 17.947 0 0 0 24 6C14.059 6 6 14.059 6 24s8.059 18 18 18 18-8.059 18-18c0-2.972-.722-5.775-1.998-8.245l-7.13 7.098Z"
                      fill="#00297A"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-9"
              >
                <form
                  aria-live="polite"
                  class="o-form MuiBox-root emotion-10"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-13"
                      >
                        <div
                          class="MuiBox-root emotion-14"
                        >
                          <h2
                            class="MuiTypography-root MuiTypography-h4 emotion-15"
                            data-se="o-form-head"
                            tabindex="-1"
                          >
                            Set up an Okta Verify account
                          </h2>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-13"
                      >
                        <div
                          class="MuiBox-root emotion-14"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-18"
                            data-se="o-form-explain"
                            tabindex="-1"
                          >
                            To sign in with Okta FastPass, you’ll need to set up Okta Verify on this device.
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <div
                          class="MuiBox-root emotion-20"
                        >
                          <ol
                            class="MuiList-root MuiList-padding emotion-21"
                          >
                            <li
                              class="MuiListItem-root emotion-22"
                            >
                              <div
                                class="MuiBox-root emotion-11"
                              >
                                <div
                                  class="MuiBox-root emotion-2"
                                >
                                  <div
                                    class="MuiBox-root emotion-14"
                                  >
                                    <p
                                      class="MuiTypography-root MuiTypography-body1 emotion-18"
                                      data-se="o-form-explain"
                                      tabindex="-1"
                                    >
                                      If you don’t have Okta Verify installed, 
                                      <a
                                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways download-ov-link emotion-27"
                                        href="https://play.google.com/store/apps/details?id=com.okta.android.auth"
                                        id="download-ov"
                                        target="_blank"
                                      >
                                        download the app.
                                      </a>
                                    </p>
                                  </div>
                                </div>
                              </div>
                            </li>
                            <li
                              class="MuiListItem-root emotion-22"
                            >
                              <div
                                class="MuiBox-root emotion-11"
                              >
                                <div
                                  class="MuiBox-root emotion-2"
                                >
                                  <div
                                    class="MuiBox-root emotion-14"
                                  >
                                    <p
                                      class="MuiTypography-root MuiTypography-body1 emotion-18"
                                      data-se="o-form-explain"
                                      tabindex="-1"
                                    >
                                      Open Okta Verify and follow the steps to add your account.
                                    </p>
                                  </div>
                                </div>
                              </div>
                            </li>
                            <li
                              class="MuiListItem-root emotion-22"
                            >
                              <div
                                class="MuiBox-root emotion-11"
                              >
                                <div
                                  class="MuiBox-root emotion-2"
                                >
                                  <div
                                    class="MuiBox-root emotion-14"
                                  >
                                    <p
                                      class="MuiTypography-root MuiTypography-body1 emotion-18"
                                      data-se="o-form-explain"
                                      tabindex="-1"
                                    >
                                      When prompted, choose Sign In, then enter the sign-in URL:
                                    </p>
                                  </div>
                                </div>
                                <div
                                  class="MuiBox-root emotion-2"
                                >
                                  <div
                                    class="MuiBox-root emotion-14"
                                  >
                                    <p
                                      class="MuiTypography-root MuiTypography-body1 emotion-18"
                                      data-se="o-form-explain"
                                      tabindex="-1"
                                    >
                                      <span
                                        class="no-translate"
                                      >
                                        https://idx.okta1.com
                                      </span>
                                    </p>
                                  </div>
                                </div>
                                <div
                                  class="MuiBox-root emotion-13"
                                >
                                  <button
                                    class="MuiButtonBase-root MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-fullWidth emotion-42"
                                    tabindex="0"
                                    type="button"
                                  >
                                    Copy sign-in URL to clipboard
                                  </button>
                                </div>
                              </div>
                            </li>
                            <li
                              class="MuiListItem-root emotion-22"
                            >
                              Finish setting up your account in Okta Verify, then try signing in again.
                            </li>
                          </ol>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-13"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-45"
                          role="link"
                        >
                          Back
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`oda-enrollment-android-applink should render view when "Yes, I already have an account" is selected 1`] = `
<div>
  <div
    class="emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-se="auth-container main-container"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="MuiBox-root emotion-6"
                data-se="okta-sign-in-header auth-header authCoinSpacing"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                  tabindex="-1"
                />
                <div
                  aria-hidden="true"
                  class="MuiBox-root emotion-8"
                  data-se="factor-beacon mfa-okta-verify "
                >
                  <svg
                    aria-labelledby="mfa-okta-verify"
                    fill="none"
                    height="2.85714286rem"
                    role="img"
                    viewBox="0 0 48 48"
                    width="2.85714286rem"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="mfa-okta-verify"
                    >
                      Okta Verify
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M32.872 22.853a8.947 8.947 0 1 1-2.288-4.91L24 24.498l-3.205-3.19c-.482-.48-1.322-.48-1.804 0a1.26 1.26 0 0 0-.374.898c0 .34.133.659.374.898l4.107 4.09c.24.239.561.371.902.371.336 0 .664-.136.902-.372L38.636 13.52a18.089 18.089 0 0 0-1.634-1.967A17.947 17.947 0 0 0 24 6C14.059 6 6 14.059 6 24s8.059 18 18 18 18-8.059 18-18c0-2.972-.722-5.775-1.998-8.245l-7.13 7.098Z"
                      fill="#00297A"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-9"
              >
                <form
                  aria-live="polite"
                  class="o-form MuiBox-root emotion-10"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-13"
                      >
                        <div
                          class="MuiBox-root emotion-14"
                        >
                          <h2
                            class="MuiTypography-root MuiTypography-h4 emotion-15"
                            data-se="o-form-head"
                            tabindex="-1"
                          >
                            Additional setup required to use Okta FastPass
                          </h2>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-13"
                      >
                        <div
                          class="MuiBox-root emotion-14"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-18"
                            data-se="o-form-explain"
                            tabindex="-1"
                          >
                            Okta FastPass is a security method that can sign you in without needing your username.
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <div
                          class="MuiBox-root emotion-20"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-18"
                            tabindex="-1"
                          >
                            Already have Okta FastPass enabled for your account?
                          </p>
                          <ul
                            class="MuiList-root MuiList-padding emotion-22"
                          >
                            <li
                              class="MuiListItem-root emotion-23"
                            >
                              <div
                                class="MuiBox-root emotion-11"
                              >
                                <div
                                  class="MuiBox-root emotion-2"
                                >
                                  <div
                                    class="MuiBox-root emotion-14"
                                  >
                                    <p
                                      class="MuiTypography-root MuiTypography-body1 emotion-18"
                                      data-se="o-form-explain"
                                      tabindex="-1"
                                    >
                                      Make sure your Okta Verify is up-to-date, then try signing in again.
                                    </p>
                                  </div>
                                </div>
                              </div>
                            </li>
                            <li
                              class="MuiListItem-root emotion-23"
                            >
                              <div
                                class="MuiBox-root emotion-11"
                              >
                                <div
                                  class="MuiBox-root emotion-2"
                                >
                                  <div
                                    class="MuiBox-root emotion-14"
                                  >
                                    <p
                                      class="MuiTypography-root MuiTypography-body1 emotion-18"
                                      data-se="o-form-explain"
                                      tabindex="-1"
                                    >
                                      If your device has a work profile, make sure you are signing in from the same profile that Okta Verify is installed in.
                                    </p>
                                  </div>
                                </div>
                              </div>
                            </li>
                            <li
                              class="MuiListItem-root emotion-23"
                            >
                              <div
                                class="MuiBox-root emotion-11"
                              >
                                <div
                                  class="MuiBox-root emotion-2"
                                >
                                  <div
                                    class="MuiBox-root emotion-14"
                                  >
                                    <p
                                      class="MuiTypography-root MuiTypography-body1 emotion-18"
                                      data-se="o-form-explain"
                                      tabindex="-1"
                                    >
                                      On certain browsers and applications, Okta FastPass is not supported.
                                    </p>
                                  </div>
                                </div>
                              </div>
                            </li>
                          </ul>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <div
                          class="MuiBox-root emotion-20"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-18"
                            tabindex="-1"
                          >
                            Need to set up Okta FastPass for your account?
                          </p>
                          <ol
                            class="MuiList-root MuiList-padding emotion-41"
                          >
                            <li
                              class="MuiListItem-root emotion-23"
                            >
                              <div
                                class="MuiBox-root emotion-11"
                              >
                                <div
                                  class="MuiBox-root emotion-2"
                                >
                                  <div
                                    class="MuiBox-root emotion-14"
                                  >
                                    <p
                                      class="MuiTypography-root MuiTypography-body1 emotion-18"
                                      data-se="o-form-explain"
                                      tabindex="-1"
                                    >
                                      On this device, open the Okta Verify app.
                                    </p>
                                  </div>
                                </div>
                              </div>
                            </li>
                            <li
                              class="MuiListItem-root emotion-23"
                            >
                              <div
                                class="MuiBox-root emotion-11"
                              >
                                <div
                                  class="MuiBox-root emotion-2"
                                >
                                  <div
                                    class="MuiBox-root emotion-14"
                                  >
                                    <p
                                      class="MuiTypography-root MuiTypography-body1 emotion-18"
                                      data-se="o-form-explain"
                                      tabindex="-1"
                                    >
                                      On the list of accounts, tap your account for https://idx.okta1.com.
                                    </p>
                                  </div>
                                </div>
                              </div>
                            </li>
                            <li
                              class="MuiListItem-root emotion-23"
                            >
                              <div
                                class="MuiBox-root emotion-11"
                              >
                                <div
                                  class="MuiBox-root emotion-2"
                                >
                                  <div
                                    class="MuiBox-root emotion-14"
                                  >
                                    <p
                                      class="MuiTypography-root MuiTypography-body1 emotion-18"
                                      data-se="o-form-explain"
                                      tabindex="-1"
                                    >
                                      Under the “Okta FastPass” section, tap Setup, then follow the instructions.
                                    </p>
                                  </div>
                                </div>
                              </div>
                            </li>
                            <li
                              class="MuiListItem-root emotion-23"
                            >
                              <div
                                class="MuiBox-root emotion-11"
                              >
                                <div
                                  class="MuiBox-root emotion-2"
                                >
                                  <div
                                    class="MuiBox-root emotion-14"
                                  >
                                    <p
                                      class="MuiTypography-root MuiTypography-body1 emotion-18"
                                      data-se="o-form-explain"
                                      tabindex="-1"
                                    >
                                      After your setup is complete, return here to try signing in again.
                                    </p>
                                  </div>
                                </div>
                              </div>
                            </li>
                          </ol>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-13"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-63"
                          role="link"
                        >
                          Back
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;
